--- a/styles/styles.css
+++ b/styles/styles.css
@@ -395,7 +395,10 @@ background: #2196F3;
     margin-right:10px;
 }
 
-.item-envelope:hover,
+a:hover {
+    fill: #2196F3;
+}
+
 .item-envelope:focus {
     fill: #2196F3;
 }
@@ -468,6 +471,10 @@ background: #2196F3;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
 }
+/* 
+a:hover svg {
+    fill: #2196F3;
+} */
 
 .list-item-social:hover,
 .list-item-social:focus {
@@ -484,6 +491,12 @@ background: #2196F3;
     
     --color4: #FFFFFF;
     --color1: #FFFFFF;
+}
+
+.list-item-social:hover .social-icon {
+    --color4: #FFFFFF;
+        --color1: #FFFFFF;
+      
 }
 
 .client-list {
