--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,7 +159,7 @@ background: #2196F3;
 }
 .primary {  
     
-    background: linear-gradient(rgba(78, 79, 85, 0.4), rgb(78, 66, 80) ) , url(/images/background-image.jpg);
+    background: linear-gradient(rgba(78, 79, 85, 0.4), rgb(78, 66, 80) ) , url(../images/background-image.jpg);
     background-position:100% 100%;
     background-size:contain;
    
