--- a/styles/styles.css
+++ b/styles/styles.css
@@ -170,6 +170,11 @@ background: #2196F3;
     padding-top:200px;
     padding-bottom:200px;
     margin-bottom: 94px;
+
+    max-width: 100%;
+        padding: 0 15px;
+        margin: 0 auto;
+        max-width:1600px;
     
 }
 
