--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,7 @@ background: #FFFFFF
         padding-top: 32px;
         padding-bottom: 32px;
         padding-right: 371px;
+        color: #212121;
 }
 
 .contact-item {
@@ -75,11 +76,13 @@ background: #FFFFFF
     background: #F5F4FA;
     font-weight: 500;
         font-size: 16px;
+        color: #212121;
         line-height: 1.6;
         /* text-align: center; */
         letter-spacing: 0.03em;
         font-family: 'Roboto';
-        background: #F5F4FA;
+            font-style: normal;
+            background: #F5F4FA;
             border-radius: 4px;
             margin: 0 8px;
             width: 121px;
@@ -140,11 +143,14 @@ background: #2196F3;
 
 
 .adress-item {
+    
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
         color: #FFFFFF;
         padding:20px 0 9px 0;
+        
+        
        
         
 }
@@ -163,7 +169,11 @@ background: #2196F3;
 
 
 .primary-item {
-    font-weight: 900;
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 900;
+        
+    
         font-size: 44px;
         line-height: 1.36;
         letter-spacing: 0.06em;
@@ -195,6 +205,9 @@ background: #2196F3;
 }
 
 .fourth-header {
+    font-family: 'Roboto';
+        font-style: normal;
+        
     font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
@@ -203,6 +216,8 @@ background: #2196F3;
 }
 
 .header-secondary {
+    font-family: 'Roboto';
+        font-style: normal;
     font-weight: 700;
         font-size: 36px;
         line-height: 1.16;
@@ -211,6 +226,7 @@ background: #2196F3;
         margin: 0 auto;
         text-align: center;
         margin-bottom:50px;
+
 }
 
 
@@ -223,6 +239,9 @@ background: #2196F3;
 }
 
 .header-third {
+    font-family: 'Roboto';
+        font-style: normal;
+        
     font-weight: 500;
         font-size: 16px;
         line-height: 1.19;
@@ -234,7 +253,9 @@ background: #2196F3;
 }
 
 .span-item {
-    font-size: 16px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-size: 16px;
         line-height: 1.19;
         letter-spacing: 0.03em;
         color: #757575;
@@ -245,6 +266,8 @@ background: #2196F3;
 }
 
 .header-third-portfolio {
+    font-family: 'Roboto';
+        font-style: normal;
     font-weight: 700;
         font-size: 18px;
         line-height: 2;
@@ -254,7 +277,9 @@ background: #2196F3;
 }
 
 .span-item-2 {
-    font-size: 16px;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-size: 16px;
         line-height: 1.87;
         letter-spacing: 0.03em;
         color: #757575;
@@ -265,12 +290,14 @@ background: #2196F3;
     background: #2F303A;
     display:flex;
     
-    justify-content: flex-start;
+    justify-content: space-between;
      
 }
 
 
 .logo {
+    font-family: 'Raleway';
+        font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
@@ -375,11 +402,7 @@ background: #2196F3;
     list-style: none;
     padding-bottom:60px;
 }
-.footer-list-item {
-    padding-top:9px;
-    padding-bottom: 9px;
-    
-}
+
 
 
 .section {
@@ -439,6 +462,7 @@ a:hover {
     display:flex;
     gap:30px;
     margin-bottom: 30px;
+    margin-top:94px;
     
 }
 
@@ -587,5 +611,19 @@ a:hover svg {
         display: flex;
         justify-content: space-between;
         align-items: center;
+}
+
+.footer-logo  address { 
+    text-decoration: none;
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+}
+
+.footer-list-item {
+    padding-top: 9px;
+    padding-bottom: 9px;
 }
 
